fix navigation alignment issue

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: http://nilambar.net/2015/03/simple-life-free-wordpress-theme.html
 Author: Nilambar Sharma
 Author URI: http://nilambar.net/
 Description: Simple Life is a simple, minimal and accessibility ready theme for your awesome WordPress website. It comes with a whole set of interesting, rich features and flexible theme customization. This theme is easily customizable with the Customizer feature of WordPress. It is also translation ready.
-Version: 1.8
+Version: 1.9
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: simple-life
@@ -322,7 +322,6 @@ a:active {
 .main-navigation {
 	clear: both;
 	display: block;
-	float: left;
 	width: 100%;
 	background-color: #0b789c;
 }
@@ -335,8 +334,13 @@ a:active {
 }
 
 .main-navigation li {
-	float: left;
+	display: inline-block;
 	position: relative;
+}
+
+.main-navigation li ul li {
+	float: left;
+	text-align: left;
 }
 
 .main-navigation a {
@@ -524,7 +528,8 @@ a:active {
 .aligncenter {
 	clear: both;
 	display: block;
-	margin: 0 auto;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 /*--------------------------------------------------------------
